Updated Jupyter Notebooks

--- a/src/05_fetch_articles.ipynb
+++ b/src/05_fetch_articles.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jschelb/.pyenv/versions/3.10.8/envs/mediacloud/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from utils.preprocessing import *\n",
     "from utils.database import *\n",
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "fields = {\"url\": 1, \"title\": 1, \"parsing_result.text\": 1}\n",
-    "articles = fetchArticleTexts(db,  limit=10_000, skip=0, fields=fields, query={\n",
+    "articles = fetchArticleTexts(db,  limit=50, skip=0, fields=fields, query={\n",
     "                             \"processing_result\": {\"$exists\": False}})"
    ]
   },
@@ -79,9 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of articles: 50\n"
+     ]
+    }
+   ],
    "source": [
     "for article in articles:\n",
     "    text = article.get(\"parsing_result\", {}).get(\"text\", \"\")\n",
@@ -112,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,11 +185,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving the dataset (1/1 shards): 100%|██████████| 50/50 [00:00<00:00, 3001.89 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "dataset.save_to_disk('../data/input/articles')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skip to comments. Posted on 07/01/2016 4:30:44 PM PDT by The_Media_never_lie A West Glacier man was \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset[42][\"text\"][:100])"
    ]
   },
   {
@@ -180,9 +222,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(dataset[0][\"text\"][:100])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
