--- a/src/50_run_hvv_detection.ipynb
+++ b/src/50_run_hvv_detection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset length: 651\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = load_from_disk('../data/input/articles_tokenized')\n",
     "print(\"Dataset length:\", len(dataset))"
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +156,7 @@
     "\n",
     "    # Add new column\n",
     "    dataset_full = dataset_full.add_column('Answers', predictions)\n",
-    "    dataset_full.save_to_disk('data/output/articles_processed_' + str(id))\n",
+    "    dataset_full.save_to_disk('../data/output/articles_processed_' + str(id))\n",
     "    # with open(\"data/output/articles_processed.pkl\" + device, \"wb\") as file:\n",
     "    #     pickle.dump(dataset_full, file)\n",
     "\n",
@@ -157,9 +165,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: Tesla P100-PCIE-16GB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches:   0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: Tesla P100-PCIE-16GB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 2/2 [00:17<00:00,  8.92s/it]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 325/325 [00:00<00:00, 11301.37 examples/s]\n",
+      "Batches: 100%|██████████| 2/2 [00:20<00:00, 10.32s/it]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 326/326 [00:00<00:00, 14234.71 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "thread1 = threading.Thread(\n",
     "    target=generate_predictions_from_dataset, args=(0, dataset1, 'cuda:0'))\n",
@@ -184,9 +224,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving the dataset (1/1 shards): 100%|██████████| 651/651 [00:00<00:00, 14549.20 examples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing on both GPUs completed!\n",
+      "Results: 651\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "results_1 = load_from_disk('../data/output/articles_processed_0')\n",
     "results_2 = load_from_disk('../data/output/articles_processed_1')\n",
@@ -196,6 +259,13 @@
     "print(\"Processing on both GPUs completed!\")\n",
     "print(\"Results:\", len(merged_dataset))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
